print on page FINISH first exercise

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>js-mail-dadi</title>
 </head>
 <body>
-    
+    <div id="player"></div>
+    <div id="computer"></div>
+    <div id="result"></div>
 
 
 
