--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
     <title>js-mail-dadi</title>
 </head>
 <body>
+    <!-- esercizio 1 -->
     <div id="player"></div>
     <div id="computer"></div>
     <div id="result"></div>
 
+<br><br><br><br>
 
+    <!-- esercizio 2 -->
+     <form action="">
+           <input type="email" placeholder="Inserisci email" id="email">
+           <button type="button" id="button">Invia</button>
+     </form>
+     <div id="checkResult"></div>
+         
 
     <script src="js/script.js"></script>
 </body>
