I do exercise 2 with the ciclo for

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br><br><br><br>
 
     <!-- esercizio 2 -->
-     <form action="">
+     <form>
            <input type="email" placeholder="Inserisci email" id="email">
            <button type="button" id="button">Invia</button>
      </form>
